scaffold/typescript-go-main/testdata/baselines/reference/submodule/conformance/jsDeclarationsModuleReferenceHasEmit.errors.txt
index.js(9,11): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
index.js(9,17): error TS1005: '}' expected.


==== index.js (2 errors) ====
    /**
     * @module A
     */
    class A {}
    
    
    /**
     * Target element
     * @type {module:A}
              ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
                    ~
!!! error TS1005: '}' expected.
     */
    export let el = null;
    
    export default A;